--- a/src/main/resources/templates/requests.html
+++ b/src/main/resources/templates/requests.html
@@ -22,6 +22,8 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
             </ul>
+            <button class="btn btn-link" style="color: darkkhaki" id="requestsButton" onclick="getAdminPage()">Admin page
+            </button>
             <button class="btn btn-link" style="color: darkgray" onclick="logout()">Logout</button>
         </div>
     </nav>
@@ -159,6 +161,10 @@
 
             }
         })
+    }
+
+    function getAdminPage() {
+        history.back()
     }
 
     function logout() {
